# dataset-alpha

./: .gitmodules  compress_legal_docs.py  compress_legal_docs0.py  converter.sh  distilled_knowledge_OpenID4VCI.json  docker-compose.yml  inference_engine.py  main.py  mcp_server.py  orchestrator.py  pipeline.py  pyproject.toml  readme.txt  source_manager.py  source_registry.json  sources.yaml  topic_crawler.py  topic_routed_pipeline.py  tracker.py  train_nexus.py  training_data.jsonl  update.py  validate.py  verification_report.json
compressed/: _compression_progress.json
compressed/EN/: ESI-0019142-1v131v123_compressed.md  ESI-0019182-1v131v122_compressed.md  ESI-0019411-1v161v153_compressed.md  en_31912201v010301p_compressed.md  en_31912202v010101p_compressed.md  en_31913201v010301p_compressed.md  en_31913202v010101p_compressed.md  en_31914202v010201p_compressed.md  en_31916202v010101p_compressed.md  en_319403v020202p_compressed.md
compressed/IETF/: draft-ietf-oauth-sd-jwt-vc-16_compressed.md  rfc1034_compressed.md  rfc1058_compressed.md  rfc1075_compressed.md  rfc1112_compressed.md  rfc1123_compressed.md  rfc1319_compressed.md  rfc1321_compressed.md  rfc1422_compressed.md  rfc1535_compressed.md  rfc20_compressed.md  (+262 more)
downloads/: esi_overview.json  index.html  references.dot  references.json  references.mmd  work_items.json  work_items_summary.json
lib/: util.py
mcp/: DockerFile  mcp_v0.py  start.sh
mcp_index/: adjacency_matrix.npz  chunk_index.json  document_embeddings.npy  document_metadata.json  node_index.json  pagerank_scores.npy  summary.json  training_config.json
old/: kb_builder.py  kb_builder_v2.py  kb_crawler.py  pipeline.py  topic_crawler.py
src/: parser.py  scraper.py  verifier.py
(+669 files in other folders)
