[project]
name = "dataset-alpha"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "docling (>=2.80.0,<3.0.0)",
    "datetime (>=6.0,<7.0)",
    "rapidocr-onnxruntime (>=1.4.4,<2.0.0)",
    "pyjson (>=1.4.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "transformers (>=5.6.1,<6.0.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "langchain-experimental (>=0.4.1,<0.5.0)",
    "openai (>=2.32.0,<3.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "brotli (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.4.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"