[project]
name = "dataset-alpha"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "docling (>=2.80.0,<3.0.0)",
    "datetime (>=6.0,<7.0)",
    "rapidocr-onnxruntime (>=1.4.4,<2.0.0)",
    "pyjson (>=1.4.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "python-docx (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
